--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.2.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-day-picker": "^9.6.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
